[package]
name = "rvoip-sip-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

description = "Stateful SIP proxy primitives (RFC 3261 §16) for the rvoip stack"

[lints]
workspace = true

[dependencies]
# Internal — depend on the transaction layer only, NOT DialogManager.
# A stateful proxy is dialog-agnostic: it pairs an upstream server
# transaction with one or more downstream client transactions and
# forwards messages between them.
rvoip-sip-core.workspace = true
rvoip-sip-transport.workspace = true
rvoip-sip-dialog.workspace = true

# External
tokio.workspace = true
async-trait.workspace = true
dashmap.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
